--- a/blocks/popup/__input-name/popup__input-name.css
+++ b/blocks/popup/__input-name/popup__input-name.css
@@ -1,4 +1,4 @@
-.popup__input_type_job {
+.popup__input-name {
     font-size: 14px;
     line-height: 16.94px;
     border: none;
@@ -7,6 +7,6 @@
     padding: 0 0 9px 0;
 }
 
-.popup__input_type_job:focus {
+.popup__input-name:focus {
     outline: none;
 }
